--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Run Buddy</title>
+
+    <!--link to css-->
+    <link rel="stylesheet" href="./assets/css/style.css" />
+
 </head>
 <body>
     
