--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
       <!-- "what we do" section -->
       <section id="what-we-do" class="intro">
-          <h2 class="section-title primary-border">What We Do</h2>
+        <h2 class="section-title primary-border">What We Do</h2>
         <p>
           butcher selfies chambray shabby chic gentrify readymade yr Echo Park
           XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you
@@ -112,19 +112,19 @@
         <div>
           <!-- insert this img element -->
           <img src="./assets/images/01-04-svgs copy/step-1.svg" alt="" />
-          <h3>Step 1: <span>Fill Out the Form Above.</span> </h3>
+          <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
           <p>You're already here, so why not?</p>
         </div>
 
         <div>
-            <img src="./assets/images/01-04-svgs copy/step-2.svg" alt="" />
-          <h3>Step 2: <span>Consult with One of Our Trainers.</span> </h3>
+          <img src="./assets/images/01-04-svgs copy/step-2.svg" alt="" />
+          <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
           <p>Are you here to build muscle, lose weight, or just feel good?</p>
         </div>
 
         <div>
-            <img src="./assets/images/01-04-svgs copy/step-3.svg" alt="" />
-          <h3> Step 3: <span>Get Running.</span> </h3>
+          <img src="./assets/images/01-04-svgs copy/step-3.svg" alt="" />
+          <h3>Step 3: <span>Get Running.</span></h3>
           <p>
             Hit the ground running (literally) once your trainer lays out your
             plan.
@@ -132,9 +132,98 @@
         </div>
 
         <div>
-            <img src="./assets/images/01-04-svgs copy/step-4.svg" alt="" />
-          <h3> Step 4: <span>See Results.</span> </h3>
+          <img src="./assets/images/01-04-svgs copy/step-4.svg" alt="" />
+          <h3>Step 4: <span>See Results.</span></h3>
           <p>Bi-weekly checkins with your trainer will keep you focused</p>
+        </div>
+      </section>
+
+      <!-- Meet the Trainers -->
+      <section id="your-trainers" class="trainers">
+        <h2 class="section-title primary-border">Meet the Trainers</h2>
+        <!-- First trainer bio-->
+        <article class="trainer">
+          <img
+            src="./assets/images/01-05-trainers/trainer-1.jpg"
+            alt="Arron Stephens in his workout clothes, reaady to pump iron"
+          />
+          <div class="trainer-bio text-left">
+            <h3>Arron Stephens</h3>
+            <h4>Speed / Strength</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
+              neque animi quo cupiditate commodi saepe culpa sed itaque velit
+              maiores optio dolorem excepturi aperiam dolores, voluptatibus
+              suscipit amet quis repellat!
+            </p>
+          </div>
+        </article>
+
+        <!-- second trainer bio -->
+        <article class="trainer">
+          <div class="trainer-bio text-right">
+            <h3>Joanna Gill</h3>
+            <h4>Endurance</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
+              neque animi quo cupiditate commodi saepe culpa sed itaque velit
+              maiores optio dolorem excepturi aperiam dolores, voluptatibus
+              suscipit amet quis repellat!
+            </p>
+          </div>
+          <img
+            src="./assets/images/01-05-trainers/trainer-2.jpg"
+            alt="Joanna Gill cooling off after a workout"
+          />
+        </article>
+
+        <!-- third trainer bio -->
+        <article class="trainer">
+          <img
+            src="./assets/images/01-05-trainers/trainer-3.jpg"
+            alt="Harry Smith wearing a headband and lifting comically small pink weights"
+          />
+          <div class="trainer-bio text-left">
+            <h3>Harry "the Headband" Smith</h3>
+            <h4>Strength</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
+              neque animi quo cupiditate commodi saepe culpa sed itaque velit
+              maiores optio dolorem excepturi aperiam dolores, voluptatibus
+              suscipit amet quis repellat!
+            </p>
+          </div>
+        </article>
+      </section>
+
+      <!-- "reach out" section" -->
+      <section>
+        <h2>Reach Out</h2>
+        <div class="contact-info">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d664.9793420632893!2d-111.90051732635469!3d40.7464034588296!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752f5213537c2b3%3A0xc2557b1f5828a234!2sTesla%20Service%20Center!5e0!3m2!1szh-TW!2sus!4v1647185310406!5m2!1szh-TW!2sus"
+            width="400"
+            height="400"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy">
+        </iframe>
+        </div>
+
+        <div>
+            <h3>Run Buddy</h3>
+            <p>
+                Any questions or concerns before signing up?
+                <br />
+                Let us know and we'll be happy to talk to you!
+            </p>
+            <address>
+                55 Main Street <br />
+                Some Town , Ca <br />
+                12345<br />
+                P: 555.Run.BUDZ (555.786.2839)<br />
+                E: <a href="mailto:info@buddy.io">info@runbuddy.io</a>
+            </address>
         </div>
       </section>
     </section>
