--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <title>Run Buddy</title>
-
-    <!--link to css-->
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
 
@@ -12,7 +10,7 @@
     <!-- navigation -->
     <header>
       <h1>
-        <a href="index.html">RUN BUDDY</a>
+        <a href="/"> RUN BUDDY </a>
       </h1>
       <nav>
         <!-- Unordered list element -->
@@ -35,197 +33,185 @@
       </nav>
     </header>
 
+    <!-- hero/jumbotron -->
     <section class="hero">
-      <section>
-        <div class="hero-form">
-          <h3>Get Started Today</h3>
+      <div class="hero-form">
+        <h3>Get Started Today</h3>
+        <p>
+          Fill out this form and one of our trainers will schedule a consult
+        </p>
+        <form>
+          <label for="name">Enter full name:</label>
+          <input
+            type="text"
+            placeholder="Your Name"
+            name="name"
+            id="name"
+            class="form-input"
+          />
+          <label for="email">Enter email address:</label>
+          <input
+            type="text"
+            placeholder="Email Address"
+            name="email"
+            id="email"
+            class="form-input"
+          />
+          <label for="phone">Enter a telephone number:</label>
+          <input
+            type="text"
+            placeholder="Phone Number"
+            name="phone"
+            id="phone"
+            class="form-input"
+          />
           <p>
-            Fill out this form and one of our trainers will schedule a consult
+            Have you worked out with a trainer before?
+            <input type="radio" name="trainer-confirm" id="trainer-yes" />
+            <label for="trainer-yes">Yes</label>
+            <input type="radio" name="trainer-confirm" id="trainer-no" />
+            <label for="trainer-no">No</label>
           </p>
-          <!--Add form element-->
-          <form>
-            <label for="name">Enter full name:</label>
-            <input
-              type="text"
-              placeholder="Your Name"
-              name="name"
-              id="name"
-              class="form-input"
-            />
-            <label for="email">Enter email address:</label>
-            <input
-              type="email"
-              placeholder="Email Address"
-              name="email"
-              id="email"
-              class="form-input"
-            />
-            <label for="phone">Enter a telephone number:</label>
-            <input
-              type="tel"
-              placeholder="Phone Number"
-              name="phone"
-              id="phone"
-              class="form-input"
-            />
-
-            <p>
-              Have you worked out with a trainer before?
-              <input type="radio" name="trainer-confirm" id="trainer-yes" />
-              <label for="trainer-yes">Yes</label>
-              <input type="radio" name="trainer-confirm" id="trainer-no" />
-              <label for="trainer-no">No</label>
-            </p>
-            <p>
-              <label for="checkbox">
-                I acknowledge that I am at least 18 years of age.
-              </label>
-              <input type="checkbox" name="age-confirm" id="checkbox" />
-            </p>
-            <button type="submit">Get running!</button>
-          </form>
-        </div>
-      </section>
+          <p>
+            <label for="checkbox">
+              I acknowledge that I am at least 18 years of age.
+            </label>
+            <input type="checkbox" name="checkpoint1" id="checkbox" />
+          </p>
+          <button type="submit">Get running!</button>
+        </form>
+      </div>
     </section>
 
-    <section>
-      <!-- hero/jumbotron -->
-      <section></section>
+    <!-- "what we do" section -->
+    <section id="what-we-do" class="intro">
+      <h2 class="section-title primary-border">What We Do</h2>
+      <p>
+        butcher selfies chambray shabby chic gentrify readymade yr Echo Park
+        XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you
+        probably haven't heard of them single-origin coffee Vice fanny pack
+        fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson
+        Thundercats viral bitters flannel meggings narwhal Marfa Schlitz
+        sustainable Intelligentsia umami deep v craft
+      </p>
+    </section>
 
-      <!-- "what we do" section -->
-      <section id="what-we-do" class="intro">
-        <h2 class="section-title primary-border">What We Do</h2>
+    <!-- "what you do" section -->
+    <section id="what-you-do" class="steps">
+      <h2 class="section-title secondary-border">What You Do</h2>
+
+      <div>
+        <img src="./assets/images/01-04-svgs copy/step-1.svg" alt="" />
+        <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
+        <p>You're already here, so why not?</p>
+      </div>
+
+      <div>
+        <img src="./assets/images/01-04-svgs copy/step-2.svg" alt="" />
+        <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
+        <p>Are you here to build muscle, lose weight, or just feel good?</p>
+      </div>
+
+      <div>
+        <img src="./assets/images/01-04-svgs copy/step-3.svg" alt="" />
+        <h3>Step 3: <span>Get Running.</span></h3>
         <p>
-          butcher selfies chambray shabby chic gentrify readymade yr Echo Park
-          XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you
-          probably haven't heard of them single-origin coffee Vice fanny pack
-          fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson
-          Thundercats viral bitters flannel meggings narwhal Marfa Schlitz
-          sustainable Intelligentsia umami deep v craft
+          Hit the ground running (literally) once your trainer lays out your
+          plan.
         </p>
-      </section>
+      </div>
 
-      <!-- "what you do" section -->
-      <section id="what-you-do" class="steps">
-        <h2 class="section-title secondary-border">What You Do</h2>
+      <div>
+        <img src="./assets/images/01-04-svgs copy/step-4.svg" alt="" />
+        <h3>Step 4: <span>See Results.</span></h3>
+        <p>Bi-weekly checkins with your trainer will keep you focused</p>
+      </div>
+    </section>
 
-        <div>
-          <!-- insert this img element -->
-          <img src="./assets/images/01-04-svgs copy/step-1.svg" alt="" />
-          <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
-          <p>You're already here, so why not?</p>
-        </div>
-
-        <div>
-          <img src="./assets/images/01-04-svgs copy/step-2.svg" alt="" />
-          <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
-          <p>Are you here to build muscle, lose weight, or just feel good?</p>
-        </div>
-
-        <div>
-          <img src="./assets/images/01-04-svgs copy/step-3.svg" alt="" />
-          <h3>Step 3: <span>Get Running.</span></h3>
+    <!-- "meet the trainers" section -->
+    <section id="your-trainers" class="trainers">
+      <h2 class="section-title primary-border">Meet The Trainers</h2>
+      <article class="trainer">
+        <img
+          src="./assets/images/01-05-trainers/trainer-1.jpg"
+          alt="Arron Stephens in his workout clothes, ready to pump iron"
+        />
+        <div class="trainer-bio text-left">
+          <h3>Arron Stephens</h3>
+          <h4>Speed / Strength</h4>
           <p>
-            Hit the ground running (literally) once your trainer lays out your
-            plan.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
+            neque animi quo cupiditate commodi saepe culpa sed itaque velit
+            maiores optio dolorem excepturi aperiam dolores, voluptatibus
+            suscipit amet quis repellat!
           </p>
         </div>
+      </article>
+
+      <!-- second trainer bio -->
+      <article class="trainer">
+        <div class="trainer-bio text-right">
+          <h3>Joanna Gill</h3>
+          <h4>Endurance</h4>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
+            neque animi quo cupiditate commodi saepe culpa sed itaque velit
+            maiores optio dolorem excepturi aperiam dolores, voluptatibus
+            suscipit amet quis repellat!
+          </p>
+        </div>
+        <img
+          src="./assets/images/01-05-trainers/trainer-2.jpg"
+          alt="Joanna Gill cooling off after a workout"
+        />
+      </article>
+
+      <!-- third trainer bio -->
+      <article class="trainer">
+        <img
+          src="./assets/images/01-05-trainers/trainer-3.jpg"
+          alt="Harry Smith wearing a headband and lifting comically small pink weights"
+        />
+        <div class="trainer-bio text-left">
+          <h3>Harry "the Headband" Smith</h3>
+          <h4>Strength</h4>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
+            neque animi quo cupiditate commodi saepe culpa sed itaque velit
+            maiores optio dolorem excepturi aperiam dolores, voluptatibus
+            suscipit amet quis repellat!
+          </p>
+        </div>
+      </article>
+    </section>
+
+    <!-- "reach out" section -->
+    <section id="reach-out" class="contact">
+      <h2 class="section-title secondary-border">Reach Out</h2>
+      <div class="contact-info">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.7078238509553!2d-111.90255088431798!3d40.74645417932828!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752f5213537c2b3%3A0xe9cb9c1c6a464d7a!2s1038%20S%20300%20W%2C%20Salt%20Lake%20City%2C%20UT%2084101!5e0!3m2!1szh-TW!2sus!4v1647199722064!5m2!1szh-TW!2sus"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+        ></iframe>
 
         <div>
-          <img src="./assets/images/01-04-svgs copy/step-4.svg" alt="" />
-          <h3>Step 4: <span>See Results.</span></h3>
-          <p>Bi-weekly checkins with your trainer will keep you focused</p>
+          <h3>Run Buddy</h3>
+          <p>
+            Any questions or concerns before signing up?
+            <br />
+            Let us know and we'll be happy to talk to you!
+          </p>
+          <address>
+            55 Main Street <br />
+            Some Town, Ca <br />
+            12345<br />
+            P: 555.RUN.BUDZ (555.786.2839)<br />
+            E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+          </address>
         </div>
-      </section>
-
-      <!-- Meet the Trainers -->
-      <section id="your-trainers" class="trainers">
-        <h2 class="section-title primary-border">Meet the Trainers</h2>
-        <!-- First trainer bio-->
-        <article class="trainer">
-          <img
-            src="./assets/images/01-05-trainers/trainer-1.jpg"
-            alt="Arron Stephens in his workout clothes, reaady to pump iron"
-          />
-          <div class="trainer-bio text-left">
-            <h3>Arron Stephens</h3>
-            <h4>Speed / Strength</h4>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
-              neque animi quo cupiditate commodi saepe culpa sed itaque velit
-              maiores optio dolorem excepturi aperiam dolores, voluptatibus
-              suscipit amet quis repellat!
-            </p>
-          </div>
-        </article>
-
-        <!-- second trainer bio -->
-        <article class="trainer">
-          <div class="trainer-bio text-right">
-            <h3>Joanna Gill</h3>
-            <h4>Endurance</h4>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
-              neque animi quo cupiditate commodi saepe culpa sed itaque velit
-              maiores optio dolorem excepturi aperiam dolores, voluptatibus
-              suscipit amet quis repellat!
-            </p>
-          </div>
-          <img
-            src="./assets/images/01-05-trainers/trainer-2.jpg"
-            alt="Joanna Gill cooling off after a workout"
-          />
-        </article>
-
-        <!-- third trainer bio -->
-        <article class="trainer">
-          <img
-            src="./assets/images/01-05-trainers/trainer-3.jpg"
-            alt="Harry Smith wearing a headband and lifting comically small pink weights"
-          />
-          <div class="trainer-bio text-left">
-            <h3>Harry "the Headband" Smith</h3>
-            <h4>Strength</h4>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
-              neque animi quo cupiditate commodi saepe culpa sed itaque velit
-              maiores optio dolorem excepturi aperiam dolores, voluptatibus
-              suscipit amet quis repellat!
-            </p>
-          </div>
-        </article>
-      </section>
-
-      <!-- "reach out" section" -->
-      <section>
-        <h2>Reach Out</h2>
-        <div class="contact-info">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d664.9793420632893!2d-111.90051732635469!3d40.7464034588296!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752f5213537c2b3%3A0xc2557b1f5828a234!2sTesla%20Service%20Center!5e0!3m2!1szh-TW!2sus!4v1647185310406!5m2!1szh-TW!2sus"
-            width="400"
-            height="400"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy">
-        </iframe>
-        </div>
-
-        <div>
-            <h3>Run Buddy</h3>
-            <p>
-                Any questions or concerns before signing up?
-                <br />
-                Let us know and we'll be happy to talk to you!
-            </p>
-            <address>
-                55 Main Street <br />
-                Some Town , Ca <br />
-                12345<br />
-                P: 555.Run.BUDZ (555.786.2839)<br />
-                E: <a href="mailto:info@buddy.io">info@runbuddy.io</a>
-            </address>
-        </div>
-      </section>
+      </div>
     </section>
 
     <!-- footer -->
