--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 
     <!-- hero/jumbotron -->
     <section class="hero">
-      
       <div class="hero-cta">
         <h2>Start Building Habits.</h2>
         <p>
@@ -100,52 +99,91 @@
 
     <!-- "what we do" section -->
     <section id="what-we-do" class="intro">
-      <h2 class="section-title primary-border">What We Do</h2>
-      <p>
-        butcher selfies chambray shabby chic gentrify readymade yr Echo Park
-        XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you
-        probably haven't heard of them single-origin coffee Vice fanny pack
-        fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson
-        Thundercats viral bitters flannel meggings narwhal Marfa Schlitz
-        sustainable Intelligentsia umami deep v craft
-      </p>
+      <div class="flex-row">
+        <h2 class="section-title primary-border">What We Do</h2>
+      </div>
+
+      <div class="flex-row">
+        <p>
+          butcher selfies chambray shabby chic gentrify readymade yr Echo Park
+          XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you
+          probably haven't heard of them single-origin coffee Vice fanny pack
+          fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson
+          Thundercats viral bitters flannel meggings narwhal Marfa Schlitz
+          sustainable Intelligentsia umami deep v craft
+        </p>
+      </div>
     </section>
 
     <!-- "what you do" section -->
     <section id="what-you-do" class="steps">
-      <h2 class="section-title secondary-border">What You Do</h2>
-
-      <div>
-        <img src="./assets/images/01-04-svgs copy/step-1.svg" alt="" />
-        <h3>Step 1: <span>Fill Out the Form Above.</span></h3>
-        <p>You're already here, so why not?</p>
+      <div class="flex-row">
+        <h2 class="section-title secondary-border">What You Do</h2>
       </div>
 
-      <div>
-        <img src="./assets/images/01-04-svgs copy/step-2.svg" alt="" />
-        <h3>Step 2: <span>Consult with One of Our Trainers.</span></h3>
-        <p>Are you here to build muscle, lose weight, or just feel good?</p>
+      <div class="step">
+        <h3>Step 1.</h3>
+        <div class="step-info">
+          <div class="step-img">
+            <img src="./assets/images/01-04-svgs copy/step-1.svg" alt="" />
+          </div>
+          <div class="step-text">
+            <h4>Fill Out The Form Above</h4>
+            <p>You're already here, so why not?</p>
+          </div>
+        </div>
       </div>
 
-      <div>
-        <img src="./assets/images/01-04-svgs copy/step-3.svg" alt="" />
-        <h3>Step 3: <span>Get Running.</span></h3>
-        <p>
-          Hit the ground running (literally) once your trainer lays out your
-          plan.
-        </p>
+      <div class="step">
+        <h3>Step 2.</h3>
+        <div class="step-info">
+          <div class="step-img">
+            <img src="./assets/images/01-04-svgs copy/step-2.svg" alt="" />
+          </div>
+          <div class="step-text">
+            <h4>Consult with One of Our Trainers.</h4>
+            <p>Are you here to build muscle, lose weight, or just feel good?</p>
+          </div>
+        </div>
       </div>
 
-      <div>
-        <img src="./assets/images/01-04-svgs copy/step-4.svg" alt="" />
-        <h3>Step 4: <span>See Results.</span></h3>
-        <p>Bi-weekly checkins with your trainer will keep you focused</p>
+      <div class="step">
+        <h3>Step 3.</h3>
+        <div class="step-info">
+          <div class="step-img">
+            <img src="./assets/images/01-04-svgs copy/step-3.svg" alt="" />
+          </div>
+          <div class="step-text">
+            <h4>Get Running.</h4>
+            <p>
+              Hit the ground running (literally) once your trainer lays out your
+              plan.
+            </p>
+          </div>
+        </div>
       </div>
+
+      <div class="step">
+        <h3>Step 4.</h3>
+        <div class="step-info">
+          <div class="step-img">
+            <img src="./assets/images/01-04-svgs copy/step-4.svg" alt="" />
+          </div>
+          <div class="step-text">
+            <h4>See Results.</h4>
+            <p>Bi-weekly checkins with your trainer will keep you focused</p>
+          </div>
+        </div>
+      </div>
+      
     </section>
 
     <!-- "meet the trainers" section -->
     <section id="your-trainers" class="trainers">
-      <h2 class="section-title primary-border">Meet The Trainers</h2>
+      <div class="flex-row">
+        <h2 class="section-title primary-border">Meet The Trainers</h2>
+      </div>
+
       <article class="trainer">
         <img
           src="./assets/images/01-05-trainers/trainer-1.jpg"
@@ -202,7 +240,10 @@
 
     <!-- "reach out" section -->
     <section id="reach-out" class="contact">
-      <h2 class="section-title secondary-border">Reach Out</h2>
+      <div class="flex-row">
+        <h2 class="section-title secondary-border">Reach Out</h2>
+      </div>
+
       <div class="contact-info">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.7078238509553!2d-111.90255088431798!3d40.74645417932828!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752f5213537c2b3%3A0xe9cb9c1c6a464d7a!2s1038%20S%20300%20W%2C%20Salt%20Lake%20City%2C%20UT%2084101!5e0!3m2!1szh-TW!2sus!4v1647199722064!5m2!1szh-TW!2sus"
@@ -211,18 +252,18 @@
           loading="lazy"
         ></iframe>
 
-<div class="contact-form">
-  <h3>Contact Us</h3>
-  <form>
-    <label for="contact-name">Your Name</label>
-    <input type="text" id="contact-name" placeholder="Your Name" />
+        <div class="contact-form">
+          <h3>Contact Us</h3>
+          <form>
+            <label for="contact-name">Your Name</label>
+            <input type="text" id="contact-name" placeholder="Your Name" />
 
-    <label for="contact-message">Message</label>
-    <textarea id="contact-message" placeholder="Message"></textarea>
+            <label for="contact-message">Message</label>
+            <textarea id="contact-message" placeholder="Message"></textarea>
 
-    <button type="submit">Submit</button>
-  </form>
-</div>
+            <button type="submit">Submit</button>
+          </form>
+        </div>
 
         <div>
           <h3>Run Buddy</h3>
