--- a/index.html
+++ b/index.html
@@ -2,22 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Run Buddy</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Run Buddy</title>
   </head>
-
   <body>
-    <!-- navigation -->
+    <!-- navigation tags - block level element -->
     <header>
       <h1>
-        <a href="/"> RUN BUDDY </a>
+        <a href="/">RUN BUDDY</a>
       </h1>
       <nav>
-        <!-- Unordered list element -->
         <ul>
-          <!-- List item element-->
           <li>
-            <!-- Anchor element -->
             <a href="#what-we-do">What We Do</a>
           </li>
           <li>
@@ -32,6 +28,7 @@
         </ul>
       </nav>
     </header>
+    <!-- end navigation -->
 
     <!-- hero/jumbotron -->
     <section class="hero">
@@ -52,28 +49,28 @@
       <div class="hero-form">
         <h3>Get Started Today</h3>
         <p>
-          Fill out this form and one of our trainers will schedule a consult
+          Fill out this form and one of our trainers will schedule a consult.
         </p>
         <form>
           <label for="name">Enter full name:</label>
           <input
             type="text"
             placeholder="Your Name"
-            name="name"
             id="name"
+            name="name"
             class="form-input"
           />
           <label for="email">Enter email address:</label>
           <input
-            type="text"
+            type="email"
             placeholder="Email Address"
-            name="email"
             id="email"
+            name="email"
             class="form-input"
           />
           <label for="phone">Enter a telephone number:</label>
           <input
-            type="text"
+            type="tel"
             placeholder="Phone Number"
             name="phone"
             id="phone"
@@ -96,13 +93,13 @@
         </form>
       </div>
     </section>
+    <!-- end header -->
 
-    <!-- "what we do" section -->
+    <!-- "what we do" start - <section> -->
     <section id="what-we-do" class="intro">
       <div class="flex-row">
         <h2 class="section-title primary-border">What We Do</h2>
       </div>
-
       <div class="flex-row">
         <p>
           butcher selfies chambray shabby chic gentrify readymade yr Echo Park
@@ -114,13 +111,13 @@
         </p>
       </div>
     </section>
+    <!-- end "what we do" -->
 
-    <!-- "what you do" section -->
+    <!-- "what you do" start -->
     <section id="what-you-do" class="steps">
       <div class="flex-row">
         <h2 class="section-title secondary-border">What You Do</h2>
       </div>
-
       <div class="step">
         <h3>Step 1.</h3>
         <div class="step-info">
@@ -133,7 +130,6 @@
           </div>
         </div>
       </div>
-
       <div class="step">
         <h3>Step 2.</h3>
         <div class="step-info">
@@ -141,12 +137,11 @@
             <img src="./assets/images/01-04-svgs copy/step-2.svg" alt="" />
           </div>
           <div class="step-text">
-            <h4>Consult with One of Our Trainers.</h4>
+            <h4>Consult With One Of Our Trainers</h4>
             <p>Are you here to build muscle, lose weight, or just feel good?</p>
           </div>
         </div>
       </div>
-
       <div class="step">
         <h3>Step 3.</h3>
         <div class="step-info">
@@ -154,7 +149,7 @@
             <img src="./assets/images/01-04-svgs copy/step-3.svg" alt="" />
           </div>
           <div class="step-text">
-            <h4>Get Running.</h4>
+            <h4>Get Running</h4>
             <p>
               Hit the ground running (literally) once your trainer lays out your
               plan.
@@ -162,7 +157,6 @@
           </div>
         </div>
       </div>
-
       <div class="step">
         <h3>Step 4.</h3>
         <div class="step-info">
@@ -170,87 +164,98 @@
             <img src="./assets/images/01-04-svgs copy/step-4.svg" alt="" />
           </div>
           <div class="step-text">
-            <h4>See Results.</h4>
+            <h4>See Results</h4>
             <p>Bi-weekly checkins with your trainer will keep you focused</p>
           </div>
         </div>
       </div>
-      
     </section>
+    <!-- "what you do" end -->
 
-    <!-- "meet the trainers" section -->
-    <section id="your-trainers" class="trainers">
+    <!-- "meet the trainers" start -->
+    <section id="your-trainers">
       <div class="flex-row">
         <h2 class="section-title primary-border">Meet The Trainers</h2>
       </div>
 
-      <article class="trainer">
-        <img
-          src="./assets/images/01-05-trainers/trainer-1.jpg"
-          alt="Arron Stephens in his workout clothes, ready to pump iron"
-        />
-        <div class="trainer-bio text-left">
-          <h3>Arron Stephens</h3>
-          <h4>Speed / Strength</h4>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
-            neque animi quo cupiditate commodi saepe culpa sed itaque velit
-            maiores optio dolorem excepturi aperiam dolores, voluptatibus
-            suscipit amet quis repellat!
-          </p>
-        </div>
-      </article>
+      <div class="trainers">
+        <article class="trainer">
+          <img
+            src="./assets/images/01-05-trainers/trainer-1.jpg"
+            alt="Arron Stephens in his workout clothes, ready to pump iron"
+          />
+          <div class="trainer-bio">
+            <h3 class="trainer-name">Arron Stephens</h3>
+            <h4 class="trainer-role">Speed / Strength</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
+              neque animi quo cupiditate commodi saepe culpa sed itaque velit
+              maiores optio dolorem excepturi aperiam dolores, voluptatibus
+              suscipit amet quis repellat!
+            </p>
+          </div>
+        </article>
 
-      <!-- second trainer bio -->
-      <article class="trainer">
-        <div class="trainer-bio text-right">
-          <h3>Joanna Gill</h3>
-          <h4>Endurance</h4>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
-            neque animi quo cupiditate commodi saepe culpa sed itaque velit
-            maiores optio dolorem excepturi aperiam dolores, voluptatibus
-            suscipit amet quis repellat!
-          </p>
-        </div>
-        <img
-          src="./assets/images/01-05-trainers/trainer-2.jpg"
-          alt="Joanna Gill cooling off after a workout"
-        />
-      </article>
+        <article class="trainer">
+          <img
+            src="./assets/images/01-05-trainers/trainer-2.jpg"
+            alt="Joanna Gill cooling off after a work out"
+          />
+          <div class="trainer-bio">
+            <h3 class="trainer-name">Joanna Gill</h3>
+            <h4 class="trainer-role">Endurance</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
+              neque animi quo cupiditate commodi saepe culpa sed itaque velit
+              maiores optio dolorem excepturi aperiam dolores, voluptatibus
+              suscipit amet quis repellat!
+            </p>
+          </div>
+        </article>
 
-      <!-- third trainer bio -->
-      <article class="trainer">
-        <img
-          src="./assets/images/01-05-trainers/trainer-3.jpg"
-          alt="Harry Smith wearing a headband and lifting comically small pink weights"
-        />
-        <div class="trainer-bio text-left">
-          <h3>Harry "the Headband" Smith</h3>
-          <h4>Strength</h4>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
-            neque animi quo cupiditate commodi saepe culpa sed itaque velit
-            maiores optio dolorem excepturi aperiam dolores, voluptatibus
-            suscipit amet quis repellat!
-          </p>
-        </div>
-      </article>
+        <article class="trainer">
+          <img
+            src="./assets/images/01-05-trainers/trainer-3.jpg"
+            alt="Harry Smith wearing a headband and lifting comically small pink weights"
+          />
+          <div class="trainer-bio">
+            <h3 class="trainer-name">Harry "The Headband" Smith</h3>
+            <h4 class="trainer-role">Strength</h4>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi
+              neque animi quo cupiditate commodi saepe culpa sed itaque velit
+              maiores optio dolorem excepturi aperiam dolores, voluptatibus
+              suscipit amet quis repellat!
+            </p>
+          </div>
+        </article>
+      </div>
     </section>
+    <!-- "meet the trainers" end -->
 
-    <!-- "reach out" section -->
+    <!-- "reach out" start -->
     <section id="reach-out" class="contact">
       <div class="flex-row">
         <h2 class="section-title secondary-border">Reach Out</h2>
       </div>
 
       <div class="contact-info">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.7078238509553!2d-111.90255088431798!3d40.74645417932828!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752f5213537c2b3%3A0xe9cb9c1c6a464d7a!2s1038%20S%20300%20W%2C%20Salt%20Lake%20City%2C%20UT%2084101!5e0!3m2!1szh-TW!2sus!4v1647199722064!5m2!1szh-TW!2sus"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-        ></iframe>
+        <div>
+          <h3>Run Buddy</h3>
+          <p>
+            Any questions or concerns before signing up?
+            <br />
+            Let us know and we'll be happy to talk to you!
+          </p>
+
+          <address>
+            55 Main Street <br />
+            Some Town, Ca <br />
+            12345<br />
+            P: 555.RUN.BUDZ (555.786.2839)<br />
+            E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+          </address>
+        </div>
 
         <div class="contact-form">
           <h3>Contact Us</h3>
@@ -265,23 +270,16 @@
           </form>
         </div>
 
-        <div>
-          <h3>Run Buddy</h3>
-          <p>
-            Any questions or concerns before signing up?
-            <br />
-            Let us know and we'll be happy to talk to you!
-          </p>
-          <address>
-            55 Main Street <br />
-            Some Town, Ca <br />
-            12345<br />
-            P: 555.RUN.BUDZ (555.786.2839)<br />
-            E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
-          </address>
-        </div>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d12182.30520634488!2d-74.0652613!3d40.2407219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1561060983193!5m2!1sen!2sus"
+          frameborder="0"
+          style="border: 0"
+          allowfullscreen
+        >
+        </iframe>
       </div>
     </section>
+    <!-- "reach out" end -->
 
     <!-- footer -->
     <footer>
@@ -291,5 +289,6 @@
         &copy; 2019 Run Buddy, Inc.
       </div>
     </footer>
+    <!-- footer end -->
   </body>
 </html>
