--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Run Buddy</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <!-- navigation tags - block level element -->
@@ -53,7 +53,7 @@
           Fill out this form and one of our trainers will schedule a consult.
         </p>
         <form>
-          <label for="name">Enter full name:</label>
+          <label for="name">Your Name</label>
           <input
             type="text"
             placeholder="Your Name"
@@ -61,7 +61,7 @@
             name="name"
             class="form-input"
           />
-          <label for="email">Enter email address:</label>
+          <label for="email">Your Email</label>
           <input
             type="email"
             placeholder="Email Address"
@@ -69,7 +69,7 @@
             name="email"
             class="form-input"
           />
-          <label for="phone">Enter a telephone number:</label>
+          <label for="phone">Phone Number</label>
           <input
             type="tel"
             placeholder="Phone Number"
